Ensure all platforms are running same compilers